--- a/style.css
+++ b/style.css
@@ -45,7 +45,12 @@ p {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 150%;
-  margin-bottom: 4.8rem;
+}
+
+form {
+  margin-top: 4.8rem;
+  display: flex;
+  justify-content: center;
 }
 
 input, button {
@@ -59,6 +64,9 @@ input {
   background-color: #DCE2E9;
   font-size: 1.6rem;
   font-weight: 400;
+  width: 5rem;
+
+  border-radius:  .4rem 0 0 .4rem ;
 }
 
 button {
@@ -66,4 +74,6 @@ button {
   font-size: 1.6rem;
   font-weight: 700;
   color: #FFF;
+
+  border-radius: 0 .4rem .4rem 0;
 }
